--- a/css/styles.css
+++ b/css/styles.css
@@ -3,5 +3,25 @@
 </style>
 
 * {
+    box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
+}
+
+html, body {
+    background-color: #ddd;
+}
+
+header {
+    background-color: #4D41C0;
+    color: #fff    ;
+}
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+a, a:hover {
+    text-decoration: none;
+    color: unset;
 }
